src/test/deca/codegen/invalid/errors/floatOverflowConstFloatInt.deca
// Description :
//    Test du débordement sur une opération arithmétique sur des flottants
//
// Resultats :
//    Error: Float Operation Overflow

{
    float y = 340282346638528860000000000000000000.0 * 1000000;
}